--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "dev": "node src/index.js"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "string-format": "^2.0.0"
+  }
 }
